@@ -2,6 +2,8 @@
 * Fixes
   WARNING: This change breaks existing code
   * Changed the generated getter for select_list to return the text instead of the value
+* Enhancements
+  * Added #expected_title method to Druid
 === Version 1.1.2 /2016-12-19
 * Enhancements
   * Added #include? and #selected? to SelectList
